[package]
authors = ["Stephen Kichka <skichka@gmail.com>"]
categories = ["middleware", "chain of responsibility"]
description = "Library for constructing a pipeline of middleware functions"
edition = "2021"
license = "MIT"
name = "libmw"
readme = "README.md"
repository = "https://github.com/lostinspiration/libmw"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = {version = "1.0"}
