[package]
authors = ["Stephen Kichka <skichka@gmail.com>"]
categories = ["rust-patterns"]
description = "Library for constructing a pipeline of middleware functions"
edition = "2021"
keywords = ["middleware", "chain-of-responsibility"]
license = "MIT"
name = "libmw"
readme = "../README.md"
repository = "https://github.com/lostinspiration/libmw"
version = "0.1.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = {version = "1.0"}
libmw-macro = {version = "0.1", path = "../libmw-macro"}
